Fix bug where focus indicator was not visible for linked images

--- a/src/assets/styles/partials/global/_utils.scss
+++ b/src/assets/styles/partials/global/_utils.scss
@@ -38,3 +38,8 @@
 .emoji {
   font-weight: initial !important;
 }
+
+.image-link {
+  --outline-offset: var(--outline-thickness);
+  display: block;
+}
